--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,5 +39,10 @@ services:
     volumes:
       - ./logs:/app/logs
 
+  redis:
+    image: redis:7
+    ports:
+      - '6379:6379'
+
 volumes:
   postgres-data:
