--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "prisma": "^6.13.0",
+    "redis": "^5.8.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
